--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
         <section class="page-header">
-            <h1 class="project-name">glacier-mods</h1>
+            <h1 class="project-name">Glacier Engine Game Modications</h1>
             <h2 class="project-tagline"></h2>
             <a href="https://github.com/glacier-modding/glacier-mods" class="btn">View on GitHub</a>
         </section>
