--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	</head>
 	<body>
         <section class="page-header">
-            <h1 class="project-name">Glacier Engine Game Modications</h1>
+            <h1 class="project-name">Glacier Engine - Game Modications</h1>
             <h2 class="project-tagline"></h2>
-            <a href="https://github.com/glacier-modding/glacier-mods" class="btn">View on GitHub</a>
+            <a href="https://github.com/glacier-modding/glacier-mods" class="btn">Website Source available on GitHub</a>
         </section>
         <section class="main-content">
             <h1 id="g2-modscom">G2-Mods.com</h1>
