--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="https://github.com/glacier-modding/glacier-mods" class="btn">Website Source available on GitHub</a>
         </section>
         <section class="main-content">
-            <h1 id="g2-modscom">G2-Mods.com</h1>
+            <h1 id="g2-modscom">g2-mods.com</h1>
             <p>A website dedicated to hosting/documenting modifications for Glacier² Engine games. HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP &lt;3</p>
             <p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
 			<footer class="site-footer">
