--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>A website dedicated to hosting/documenting modifications for Glacier² Engine games. HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP &lt;3</p>
             <p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
 			<footer class="site-footer">
-					<span class="site-footer-owner"><a href="https://github.com/glacier-modding/glacier-mods">glacier-mods</a> is maintained by <a href="https://github.com/glacier-modding">glacier-modding</a>.</span>
+					<span class="site-footer-owner"><a href="https://github.com/glacier-modding/g2-mods">g2-mods</a> is maintained by <a href="https://github.com/glacier-modding">glacier-modding</a>.</span>
 			</footer>
 		</section>
     </body>
