--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
         <link rel="stylesheet" href="/g2-mods/assets/css/style.css?v=e6801511dfb7ebec3e89da524de7e25c94a8c6b6">
 	</head>
 	<body>
-        <section class="page-header">
+        <div class="page-header">
             <h1 class="project-name">Glacier Engine - Game Modications</h1>
             <h2 class="project-tagline"></h2>
             <a href="https://github.com/glacier-modding/glacier-mods" class="btn">Website Source available on GitHub</a>
-        </section>
-        <section class="main-content">
+        </div>
+        <div class="main-content">
             <h1 id="g2-modscom">g2-mods.com</h1>
-            <p>A website dedicated to hosting/documenting modifications for Glacier² Engine games.</p>
-			<p>HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP &lt;3</p>
-            <p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
-			<footer class="site-footer">
-					<span class="site-footer-owner"><a href="https://github.com/glacier-modding/g2-mods">g2-mods</a> is maintained by <a href="https://github.com/glacier-modding">glacier-modding</a>.</span>
-			</footer>
-		</section>
+				<p>A website dedicated to hosting/documenting modifications for Glacier² Engine games.</p>
+				<p>HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP &lt;3</p>
+				<p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
+		</div>
+		<div class="footer">
+			<span class="site-footer-owner"><a href="https://github.com/glacier-modding/g2-mods">g2-mods</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.</span>
+		</div>
     </body>
 </html>
