--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
         <div class="page-header">
             <h1 class="project-name">Glacier Engine - Game Modications</h1>
-            <h2 class="project-tagline"></h2>
-            <a href="https://github.com/glacier-modding/glacier-mods" class="btn">Website Source available on GitHub</a>
+            <h2 class="project-tagline">When I get around to it...</h2>
+            <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
         <div class="main-content">
             <h1 id="g2-modscom">g2-mods.com</h1>
@@ -18,7 +18,7 @@
 				<p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
 		</div>
 		<div class="footer">
-			<span class="site-footer-owner"><a href="https://github.com/glacier-modding/g2-mods">g2-mods</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.</span>
+			<span class="site-footer-owner"><a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.</span>
 		</div>
     </body>
 </html>
