--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#157878">
-        <link rel="stylesheet" href="/g2-mods/assets/css/style.css?v=e6801511dfb7ebec3e89da524de7e25c94a8c6b6">
+        <link rel="stylesheet" href="/g2-mods/style.css">
 	</head>
 	<body>
         <div class="page-header">
@@ -18,7 +18,9 @@
 				<p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
 		</div>
 		<div class="footer">
-			<span class="site-footer-owner"><a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.</span>
+			<span class="site-footer-owner">
+				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
+			</span>
 		</div>
     </body>
 </html>
