--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
             <h2 class="project-tagline">When I get around to it...</h2>
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
+		<div class="menu-outer">
+		  <div class="table">
+			<ul id="horizontal-list">
+			  <li>1</li>
+			  <li>2</li>
+			  <li>3</li>
+			  <li>4</li>
+			</ul>
+		  </div>
+		</div>
         <div class="main-content">
             <h1 id="g2-modscom">g2-mods.com</h1>
 				<p>A website dedicated to hosting/documenting modifications for Glacier² Engine games.</p>
