--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
             <h2 class="project-tagline">When I get around to it...</h2>
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
-		<div class="menu-outer">
+		<div id="menu-outer">
 		  <div class="table">
 			<ul id="horizontal-list">
-			  <li>1</li>
-			  <li>2</li>
-			  <li>3</li>
-			  <li>4</li>
+				<li><a>1</a></li>
+				<li><a>2</a></li>
+				<li><a>3</a></li>
+				<li><a>4</a></li>
 			</ul>
 		  </div>
 		</div>
