--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		<div id="menu-outer">
 		  <div class="table">
 			<ul id="horizontal-list">
-				<li><a>1</a></li>
-				<li><a>2</a></li>
-				<li><a>3</a></li>
-				<li><a>4</a></li>
+				<li><a>Mods</a></li>
+				<li><a>Tools</a></li>
+				<li><a>Pull up on your girl like skkkkkrrrrrttttt</a></li>
+				<li><a>Mod Gang</a></li>
 			</ul>
 		  </div>
 		</div>
