--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><a>Mods</a></li>
 				<li><a>Tools</a></li>
 				<li><a>Pull up on your girl like skkkkkrrrrrttttt</a></li>
-				<li><a>Mod Gang</a></li>
+				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
 			</ul>
 		  </div>
 		</div>
