--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="menu-outer">
 		  <div class="table">
 			<ul id="horizontal-list">
-				<li><a>Mods</a></li>
+				<li><a href="https://glacier-modding.github.io/g2-mods/mods/mods.html">Mods</a></li>
 				<li><a>Tools</a></li>
 				<li><a>Pull up on your girl like skkkkkrrrrrttttt</a></li>
 				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
