--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
             <h2 class="project-tagline">When I get around to it...</h2>
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
-		<div id="menu-outer">
-		  <div class="table">
+		<div class="menu-outer">
 			<ul id="horizontal-list">
 				<li><a href="https://glacier-modding.github.io/g2-mods/mods/mods.html">Mods</a></li>
 				<li><a>Tools</a></li>
 				<li><a>Pull up on your girl like skkkkkrrrrrttttt</a></li>
 				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
 			</ul>
-		  </div>
-		</div>
+		 </div>
         <div class="main-content">
             <h1 id="g2-modscom">g2-mods.com</h1>
 				<p>A website dedicated to hosting/documenting modifications for Glacier² Engine games.</p>
