--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="main-content">
             <h1 id="g2-modscom">g2-mods.com</h1>
 				<p>A website dedicated to hosting/documenting modifications for Glacier² Engine games.</p>
-						<li>- HITMAN</li>
-						<li>- HITMAN 2</li>
-						<li>- Deus Ex Mankind Dividied</li>
-						<li>- Hitman Absolutution</li>
+						<li>HITMAN</li>
+						<li>HITMAN 2</li>
+						<li>Deus Ex Mankind Dividied</li>
+						<li>Hitman Absolutution</li>
 				<p>HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP &lt;3</p>
 				<p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
 		</div>
