--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
         <div class="page-header">
-            <h1 class="project-name">Glacier Engine - Game Modications</h1>
+            <h1 class="project-name">Glacier Engine - Game Modifications</h1>
             <h2 class="project-tagline">When I get around to it...</h2>
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
