--- a/mods/mods.html
+++ b/mods/mods.html
@@ -1,1 +1,38 @@
-static webpages are stupid and old and I shouldn't be building them :/
+<html>
+    <head>
+		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#157878">
+        <link rel="stylesheet" href="/g2-mods/style.css">
+	</head>
+	<body>
+        <div class="page-header">
+            <h1 class="project-name">Mods</h1>
+            <h2 class="project-tagline">Slowly building this page...</h2>
+            <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
+        </div>
+		<div class="menu-outer">
+			<ul id="horizontal-list">
+				<li><a href="https://glacier-modding.github.io/g2-mods/mods/mods.html">Mods</a></li>
+				<li><a href="https://github.com/glacier-modding/g2-mods/blob/master/tools/tools.html">Tools</a></li>
+				<li><a href="https://twitter.com/hhchunter">Pull up on your girl like skkkkkrrrrrttttt</a></li>
+				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
+			</ul>
+		 </div>
+        <div class="main-content">
+            <h1 id="g2-modscom">g2-mods.com</h1>
+				<p>how am I even gonna structure this page</p>
+						<li>HITMAN</li>
+						<li>HITMAN 2</li>
+						<li>Deus Ex Mankind Dividied</li>
+						<li>Hitman Absolutution</li>
+				<p>HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP &lt;3</p>
+				<p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
+		</div>
+		<div class="footer">
+			<span class="site-footer-owner">
+				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
+			</span>
+		</div>
+    </body>
+</html>
