init setup of mod location & webpages
Fuck my actual life

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<li>HITMAN</li>
 						<li>HITMAN 2</li>
 						<li>Deus Ex Mankind Dividied</li>
-						<li>Hitman Absolutution</li>
+						<li>Hitman: Absolution</li>
 				<p>HITMAN 2 is the main focus of mod development at the moment, but hopefully modification will end up being developped for all Glacier² Engine games, more work pls @B3LYP <3</p>
 				<p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
 		</div>
