--- a/mods/mods.html
+++ b/mods/mods.html
@@ -20,13 +20,12 @@
 			</ul>
 		 </div>
         <div class="main-content">
-            <h1 id="g2-modscom">g2-mods.com</h1>
-						<a href="https://glacier-modding.github.io/g2-mods/mods/h2016.html">HITMAN</a>
-						<a href="https://glacier-modding.github.io/g2-mods/mods/h2.html">HITMAN 2</a>
-						<a href="https://glacier-modding.github.io/g2-mods/mods/demd.html">Deus Ex: Mankind Divided</a>
-						<a href="https://glacier-modding.github.io/g2-mods/mods/hma.html">Hitman: Absolution</a>
-				<p>HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP &lt;3</p>
-				<p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
+            <h1 id="g2-modscom">Glacier² Engine Games</h1>
+				<a href="https://glacier-modding.github.io/g2-mods/mods/h2016.html">HITMAN</a>
+				<a href="https://glacier-modding.github.io/g2-mods/mods/h2.html">HITMAN 2</a>
+				<a href="https://glacier-modding.github.io/g2-mods/mods/demd.html">Deus Ex: Mankind Divided</a>
+				<a href="https://glacier-modding.github.io/g2-mods/mods/hma.html">Hitman: Absolution</a>
+				<p>HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
 		</div>
 		<div class="footer">
 			<span class="site-footer-owner">
