--- a/mods/mods.html
+++ b/mods/mods.html
@@ -25,7 +25,7 @@
 				<a href="https://glacier-modding.github.io/g2-mods/mods/h2.html">HITMAN 2</a>
 				<a href="https://glacier-modding.github.io/g2-mods/mods/demd.html">Deus Ex: Mankind Divided</a>
 				<a href="https://glacier-modding.github.io/g2-mods/mods/hma.html">Hitman: Absolution</a>
-				<p>HITMAN 2 is the main focus atm, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
+				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
 		</div>
 		<div class="footer">
 			<span class="site-footer-owner">
