--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -1,1 +1,36 @@
-memes
+<html>
+    <head>
+		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#157878">
+        <link rel="stylesheet" href="/g2-mods/style.css">
+	</head>
+	<body>
+        <div class="page-header">
+            <h1 class="project-name">Mods</h1>
+            <h2 class="project-tagline">Slowly building this page...</h2>
+            <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
+        </div>
+		<div class="menu-outer">
+			<ul id="horizontal-list">
+				<li><a href="https://glacier-modding.github.io/g2-mods/mods/mods.html">Mods</a></li>
+				<li><a href="https://github.com/glacier-modding/g2-mods/blob/master/tools/tools.html">Tools</a></li>
+				<li><a href="https://twitter.com/hhchunter">Pull up on your girl like skkkkkrrrrrttttt</a></li>
+				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
+			</ul>
+		 </div>
+        <div class="main-content">
+            <h1 id="g2-modscom">Glacier² Engine Games</h1>
+				<a href="https://glacier-modding.github.io/g2-mods/mods/h2016.html">HITMAN</a>
+				<a href="https://glacier-modding.github.io/g2-mods/mods/h2.html">HITMAN 2</a>
+				<a href="https://glacier-modding.github.io/g2-mods/mods/demd.html">Deus Ex: Mankind Divided</a>
+				<a href="https://glacier-modding.github.io/g2-mods/mods/hma.html">Hitman: Absolution</a>
+				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
+		</div>
+		<div class="footer">
+			<span class="site-footer-owner">
+				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
+			</span>
+		</div>
+    </body>
+</html>
