--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#157878">
-        <link rel="stylesheet" href="/g2-mods/style.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/glacier-modding/g2-mods/master/style.css">
 	</head>
 	<body>
         <div class="page-header">
