--- a/mods/mods.html
+++ b/mods/mods.html
@@ -3,6 +3,8 @@
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#157878">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
         <link rel="stylesheet" href="https://g2-mods.com/style.css">
 	</head>
 	<body>
