--- a/mods/mods.html
+++ b/mods/mods.html
@@ -6,6 +6,7 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
         <link rel="stylesheet" href="https://g2-mods.com/style.css">
+		<title>Mods</title>
 	</head>
 	<body>
         <div class="page-header">
