--- a/mods/mods.html
+++ b/mods/mods.html
@@ -24,10 +24,10 @@
 		 </div>
         <div class="main-content">
             <h1 id="g2-modscom">Glacier² Engine Games</h1>
-				<a href="https://glacier-modding.github.io/g2-mods/mods/h2016.html">HITMAN</a>
-				<a href="https://glacier-modding.github.io/g2-mods/mods/h2.html">HITMAN 2</a>
-				<a href="https://glacier-modding.github.io/g2-mods/mods/demd.html">Deus Ex: Mankind Divided</a>
-				<a href="https://glacier-modding.github.io/g2-mods/mods/hma.html">Hitman: Absolution</a>
+				<a href="https://glacier-modding.github.io/g2-mods/h2016/h2016.html">HITMAN</a>
+				<a href="https://glacier-modding.github.io/g2-mods/h2/h2.html">HITMAN 2</a>
+				<a href="https://glacier-modding.github.io/g2-mods/demd/demd.html">Deus Ex: Mankind Divided</a>
+				<a href="https://glacier-modding.github.io/g2-mods/hma/hma.html">Hitman: Absolution</a>
 				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
 		</div>
 		<div class="footer">
