--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 		<div class="menu-outer">
 			<ul id="horizontal-list">
-				<li><a href="https://glacier-modding.github.io/g2-mods/mods/mods.html">Mods</a></li>
+				<li><a href="https://g2-mods.com/mods/mods.html">Mods</a></li>
 				<li><a href="https://github.com/glacier-modding/g2-mods/blob/master/tools/tools.html">Tools</a></li>
 				<li><a href="https://twitter.com/hhchunter">Pull up on your girl like skkkkkrrrrrttttt</a></li>
 				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
