--- a/mods/mods.html
+++ b/mods/mods.html
@@ -16,7 +16,7 @@
         </div>
 		<div class="menu-outer">
 			<ul id="horizontal-list">
-				<li><a href="https://g2-mods.com/g2-mods/mods/mods.html">Mods</a></li>
+				<li><a href="https://g2-mods.com/mods/mods.html">Mods</a></li>
 				<li><a href="https://github.com/glacier-modding/g2-mods/blob/master/tools/tools.html">Tools</a></li>
 				<li><a href="https://twitter.com/hhchunter">Pull up on your girl like skkkkkrrrrrttttt</a></li>
 				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
@@ -24,10 +24,10 @@
 		 </div>
         <div class="main-content">
             <h1 id="g2-modscom">Glacier² Engine Games</h1>
-				<a href="https://g2-mods.com/g2-mods/h2016/h2016.html">HITMAN</a>
-				<a href="https://g2-mods.com/g2-mods/h2/h2.html">HITMAN 2</a>
-				<a href="https://g2-mods.com/g2-mods/demd/demd.html">Deus Ex: Mankind Divided</a>
-				<a href="https://g2-mods.com/g2-mods/hma/hma.html">Hitman: Absolution</a>
+				<a href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</a>
+				<a href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</a>
+				<a href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</a>
+				<a href="https://g2-mods.com/mods/hma/hma.html">Hitman: Absolution</a>
 				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
 		</div>
 		<div class="footer">
