Init sorting games
Can I get a ye yea?

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						<li>HITMAN 2</li>
 						<li>Deus Ex Mankind Dividied</li>
 						<li>Hitman: Absolution</li>
-				<p>HITMAN 2 is the main focus of mod development at the moment, but hopefully modification will end up being developped for all Glacier² Engine games, more work pls @B3LYP <3</p>
-				<p>I’ve started work on this but may hit points of procrasination during building the website. Bare with me.</p>
+				<p>HITMAN 2 is the main focus of mod development at the moment, but hopefully tooling/support will end up being developed for all Glacier² Engine games, more work pls @B3LYP <3</p>
+				<p>I’ve started work on this but may hit points of procrasination during building this website so it's a WIP. Bare with me on this journey to success.</p>
 		</div>
 		<div class="footer">
 			<span class="site-footer-owner">
