Adding a grid for games
Adding a grid of games and some css changes

--- a/mods/mods.html
+++ b/mods/mods.html
@@ -26,11 +26,11 @@
             <h1 id="g2-modscom">Glacier² Engine Games</h1>
 				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
 		</div>
-		<div class="games">
-				<a href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</a>
-				<a href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</a>
-				<a href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</a>
-				<a href="https://g2-mods.com/mods/hma/hma.html">Hitman: Absolution</a>
+		<div class="game-container">
+			<div class="grid-item" href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</div>
+			<div class="grid-item" href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</div>
+			<div class="grid-item" href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</div>
+			<div class="grid-item" href="https://g2-mods.com/mods/hma/hma.html">Hitman: Absolution</div>
 		</div>
 		<div class="footer">
 			<span class="site-footer-owner">
