--- a/mods/mods.html
+++ b/mods/mods.html
@@ -27,10 +27,10 @@
 				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
 		</div>
 		<div class="game-container">
-			<div class="grid-item" href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</div>
-			<div class="grid-item" href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</div>
-			<div class="grid-item" href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</div>
-			<div class="grid-item" href="https://g2-mods.com/mods/hma/hma.html">Hitman: Absolution</div>
+			<div class="HITMAN" href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</div>
+			<div class="H2" href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</div>
+			<div class="DEMD" href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</div>
+			<div class="HMA" href="https://g2-mods.com/mods/hma/hma.html">Hitman: Absolution</div>
 		</div>
 		<div class="footer">
 			<span class="site-footer-owner">
