--- a/mods/mods.html
+++ b/mods/mods.html
@@ -3,8 +3,8 @@
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#157878">
-		<link rel="icon" type="image/png" href="g2-mods.com/favicon-32x32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="g2-mods.com/favicon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
         <link rel="stylesheet" href="https://g2-mods.com/style.css">
 		<title>Mods</title>
 	</head>
@@ -29,8 +29,12 @@
 		<div class="game-container">
 			<div class="griditem-hitman" href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</div>
 			<div class="griditem-h2" href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</div>
-			<div class="griditem-demd" href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</div>
-			<div class="griditem-hma" href="https://g2-mods.com/mods/hma/hma.html">Hitman: Absolution</div>
+			<div class="griditem-demd" 
+				 <a href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</a>
+			</div>
+			<div class="griditem-hma">
+				<a href="https://g2-mods.com/mods/hma/hma.html>Hitman: Absolution</a>
+			</div>
 		</div>
 		<div class="footer">
 			<span class="site-footer-owner">
