--- a/mods/mods.html
+++ b/mods/mods.html
@@ -29,7 +29,7 @@
 		<div class="game-container">
 			<div class="griditem-hitman" href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</div>
 			<div class="griditem-h2" href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</div>
-			<div class="griditem-demd" 
+			<div class="griditem-demd">
 				 <a href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</a>
 			</div>
 			<div class="griditem-hma">
