attention to detail v2

--- a/mods/mods.html
+++ b/mods/mods.html
@@ -33,7 +33,7 @@
 				 <a href="https://g2-mods.com/mods/demd/demd.html">Deus Ex: Mankind Divided</a>
 			</div>
 			<div class="griditem-hma">
-				<a href="https://g2-mods.com/mods/hma/hma.html>Hitman: Absolution</a>
+				<a href="https://g2-mods.com/mods/hma/hma.html">Hitman: Absolution</a>
 			</div>
 		</div>
 		<div class="footer">
