--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
 	</head>
 	<body>
         <div class="page-header">
-            <h1 class="project-name">Glacier Engine - Game Modifications</h1>
+            <h1 class="project-name">Glacier Engine Game Modifications</h1>
             <h2 class="project-tagline">When I get around to it...</h2>
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
 		<div class="menu-outer">
 			<ul id="horizontal-list">
-				<li><a href="https://g2-mods.com/mods/mods">Mods</a></li>
-				<li><a href="https://github.com/glacier-modding/g2-mods/blob/master/tools/tools.html">Tools</a></li>
+				<li><a href="https://g2-mods.com/">Home</a></li>
+				<li><a href="https://g2-mods.com/tools/tools">Tools</a></li>
+				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
 				<li><a href="https://twitter.com/hhchunter">Pull up on your girl like skkkkkrrrrrttttt</a></li>
-				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
 			</ul>
 		 </div>
         <div class="main-content">
-            <h1 id="g2-modscom">g2-mods.com</h1>
-				<p>A website dedicated to hosting/documenting modifications for Glacier² Engine games.</p>
-				<p>At the moment the following games use the Glacier² Engine<p>
-						<li>HITMAN</li>
-						<li>HITMAN 2</li>
-						<li>Deus Ex Mankind Dividied</li>
-						<li>Hitman: Absolution</li>
-				<p>HITMAN 2 is the main focus of mod development at the moment, but hopefully tooling/support will end up being developed for all Glacier² Engine games, more work pls @B3LYP <3</p>
-				<p>I’ve started work on this but may hit points of procrasination during building this website so it's a WIP. Bare with me on this journey to success.</p>
+            <h1 id="g2-modscom">Glacier² Engine Games</h1>
+				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work required pls @B3LYP <3</p>
+		</div>
+		<div class="game-container">
+			<div class="griditem-hitman" href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</div>
+			<div class="griditem-h2" href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</div>
+			<div class="griditem-demd">
+				 <a href="https://g2-mods.com/mods/demd/demd">Deus Ex: Mankind Divided</a>
+			</div>
+			<div class="griditem-hma">
+				<a href="https://g2-mods.com/mods/hma/hma">Hitman: Absolution</a>
+			</div>
 		</div>
 		<div class="footer">
 			<span class="site-footer-owner">
