Add top left logo and some organization
Ye

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 		<title>G² Mods</title>
 	</head>
 	<body>
+		<!--TOP LEFT HOME BUTTON/LOGO-->
+		<div class="logo">
+			<a href="http://g2-mods.com/">G² Mods</a>
+		</div>
+		<!--HEADER-->
         <div class="page-header">
             <h1 class="project-name">Glacier Engine Game Modifications</h1>
             <h2 class="project-tagline">When I get around to it...</h2>
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
+		<!--NAVIGATION BAR-->
 		<div class="menu-outer">
 			<ul id="horizontal-list">
 				<li><a href="https://g2-mods.com/">Home</a></li>
@@ -21,11 +27,13 @@
 				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
 				<li><a href="https://twitter.com/hhchunter">Pull up on your girl like skkkkkrrrrrttttt</a></li>
 			</ul>
-		 </div>
+		</div>
+		<!--BRIEF CONTENT--> 
         <div class="main-content">
             <h1 id="g2-modscom">Glacier² Engine Games</h1>
 				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work required pls @B3LYP <3</p>
 		</div>
+		<!--GRID-->
 		<div class="game-container">
 			<div class="griditem-hitman" href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</div>
 			<div class="griditem-h2" href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</div>
@@ -36,6 +44,7 @@
 				<a href="https://g2-mods.com/mods/hma/hma">Hitman: Absolution</a>
 			</div>
 		</div>
+		<!--FOOTER-->
 		<div class="footer">
 			<span class="site-footer-owner">
 				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
