--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<!--TOP LEFT HOME BUTTON/LOGO-->
 		<div class="logo">
-			<a href="http://g2-mods.com/">G² Mods</a>
+			<a href="http://g2-mods.com/">Glacier² Mods</a>
 		</div>
 		<!--HEADER-->
         <div class="page-header">
