--- a/index.html
+++ b/index.html
@@ -35,12 +35,20 @@
 		</div>
 		<!--GRID-->
 		<div class="game-container">
-			<div class="griditem-hitman" href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</div>
-			<div class="griditem-h2" href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</div>
+			<div class="griditem-h2016">
+				<img src="images/games/h2.jpg" alt="h2016"> 
+				<a href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</a>
+			</div>
+			<div class="griditem-h2">
+				<img src="images/games/h2.jpg" alt="h2"> 
+				<a href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</a>
+			</div>
 			<div class="griditem-demd">
-				 <a href="https://g2-mods.com/mods/demd/demd">Deus Ex: Mankind Divided</a>
+				<img src="images/games/demd.jpg" alt="demd"> 
+				<a href="https://g2-mods.com/mods/demd/demd">Deus Ex: Mankind Divided</a>
 			</div>
 			<div class="griditem-hma">
+				<img src="images/games/hma.jpg" alt="hma"> 
 				<a href="https://g2-mods.com/mods/hma/hma">Hitman: Absolution</a>
 			</div>
 		</div>
