--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -9,9 +9,14 @@
 		<title>HITMAN²</title>
 	</head>
 	<body>
+		<!--TOP LEFT HOME BUTTON/LOGO-->
+		<div class="logo">
+			<a href="http://g2-mods.com/">Glacier² Mods</a>
+		</div>
+		<!--HEADER-->
         <div class="page-header">
-            <h1 class="project-name">Mods</h1>
-            <h2 class="project-tagline">Slowly building this page...</h2>
+            <h1 class="project-name">Glacier Engine Game Modifications</h1>
+            <h2 class="project-tagline">When I get around to it...</h2>
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
 		<div class="menu-outer">
