--- a/resources/index.html
+++ b/resources/index.html
@@ -5,8 +5,8 @@
         <meta name="theme-color" content="#157878">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-        <link rel="stylesheet" href="style.css">
-		<title>G² Mods</title>
+        <link rel="stylesheet" href="../style.css">
+		<title>HITMAN²</title>
 	</head>
 	<body>
 		<!--TOP LEFT HOME BUTTON/LOGO-->
@@ -28,31 +28,10 @@
 				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
 			</ul>
 		</div>
-		<!--BRIEF CONTENT--> 
         <div class="main-content">
-            <h1 id="g2-modscom">Glacier² Engine Games</h1>
-				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work required pls @B3LYP <3</p>
+            <h1 id="g2-modscom">Resources</h1>
+				<a href="https://g2-mods.com/g2-mods/resources/h2texturemodding.html">H2 Texture Modding</a>
 		</div>
-		<!--GRID-->
-		<div class="game-container">
-			<div class="griditem-h2">
-				<img src="images/games/h2.jpg" alt="h2"> 
-				<a href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</a>
-			</div>
-			<div class="griditem-h2016">
-				<img src="images/games/h2016.jpg" alt="h2016"> 
-				<a href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</a>
-			</div>
-			<div class="griditem-demd">
-				<img src="images/games/demd.jpg" alt="demd"> 
-				<a href="https://g2-mods.com/mods/demd/demd">Deus Ex: Mankind Divided</a>
-			</div>
-			<div class="griditem-hma">
-				<img src="images/games/hma.jpg" alt="hma"> 
-				<a href="https://g2-mods.com/mods/hma/hma">Hitman: Absolution</a>
-			</div>
-		</div>
-		<!--FOOTER-->
 		<div class="footer">
 			<span class="site-footer-owner">
 				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
