--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -19,14 +19,15 @@
             <h2 class="project-tagline">When I get around to it...</h2>
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
+		<!--NAVIGATION BAR-->
 		<div class="menu-outer">
 			<ul id="horizontal-list">
-				<li><a href="https://glacier-modding.github.io/g2-mods/mods/mods.html">Mods</a></li>
-				<li><a href="https://github.com/glacier-modding/g2-mods/blob/master/tools/tools.html">Tools</a></li>
-				<li><a href="https://twitter.com/hhchunter">Pull up on your girl like skkkkkrrrrrttttt</a></li>
-				<li><a href="https://github.com/orgs/glacier-modding/people">Mod Gang</a></li>
+				<li><a href="https://g2-mods.com/">Home</a></li>
+				<li><a href="https://g2-mods.com/tools/tools">Tools</a></li>
+				<li><a href="https://g2-mods.com/resources/">Resources</a></li>
+				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
 			</ul>
-		 </div>
+		</div>
         <div class="main-content">
             <h1 id="g2-modscom">Glacier² Engine Games</h1>
 				<a href="https://g2-mods.com/g2-mods/mods/h2016.html">HITMAN</a>
