--- a/tools/tools.html
+++ b/tools/tools.html
@@ -1,1 +1,40 @@
-static webpages meme
+<html>
+    <head>
+		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#157878">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+        <link rel="stylesheet" href="https://g2-mods.com/style.css">
+		<title>HITMAN²</title>
+	</head>
+	<body>
+		<!--TOP LEFT HOME BUTTON/LOGO-->
+		<div class="logo">
+			<a href="http://g2-mods.com/">Glacier² Mods</a>
+		</div>
+		<!--HEADER-->
+        <div class="page-header">
+            <h1 class="project-name">Glacier Engine Game Modifications</h1>
+            <h2 class="project-tagline">When I get around to it...</h2>
+            <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
+        </div>
+		<!--NAVIGATION BAR-->
+		<div class="menu-outer">
+			<ul id="horizontal-list">
+				<li><a href="https://g2-mods.com/">Home</a></li>
+				<li><a href="https://g2-mods.com/tools/tools">Tools</a></li>
+				<li><a href="https://g2-mods.com/resources/">Resources</a></li>
+				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
+			</ul>
+		</div>
+        <div class="main-content">
+            <h1 id="g2-modscom">Glacier² Tools</h1>
+		</div>
+		<div class="footer">
+			<span class="site-footer-owner">
+				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
+			</span>
+		</div>
+    </body>
+</html>
