--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -23,7 +23,7 @@
 		<div class="menu-outer">
 			<ul id="horizontal-list">
 				<li><a href="https://g2-mods.com/">Home</a></li>
-				<li><a href="https://g2-mods.com/tools">Tools</a></li>
+				<li><a href="https://g2-mods.com/tools/">Tools</a></li>
 				<li><a href="https://g2-mods.com/resources/">Resources</a></li>
 				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
 			</ul>
