hopefully this fixes it

--- a/resources/index.html
+++ b/resources/index.html
@@ -30,7 +30,7 @@
 		</div>
         <div class="main-content">
             <h1 id="g2-modscom">Resources</h1>
-				<a href="../h2texturemodding.html">H2 Texture Modding</a>
+				<a href="h2texturemodding.html">H2 Texture Modding</a>
 		</div>
 		<div class="footer">
 			<span class="site-footer-owner">
