--- a/tools/index.html
+++ b/tools/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
         <link rel="stylesheet" href="https://g2-mods.com/style.css">
-		<title>HITMAN²</title>
+		<title>G² Mods</title>
 	</head>
 	<body>
 		<!--TOP LEFT HOME BUTTON/LOGO-->
