Testing if i break it all

--- a/resources/index.html
+++ b/resources/index.html
@@ -22,9 +22,9 @@
 		<!--NAVIGATION BAR-->
 		<div class="menu-outer">
 			<ul id="horizontal-list">
-				<li><a href="https://g2-mods.com/">Home</a></li>
-				<li><a href="https://g2-mods.com/tools/">Tools</a></li>
-				<li><a href="https://g2-mods.com/resources/">Resources</a></li>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../tools/">Tools</a></li>
+				<li><a href="../resources/">Resources</a></li>
 				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
 			</ul>
 		</div>
@@ -33,7 +33,7 @@
 				<a href="h2texturemodding.html">H2 Texture Modding</a>
 		</div>
 		<div class="footer">
-			<span class="site-footer-owner">
+			<span class="footer-content">
 				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
 			</span>
 		</div>
