more footer fixes

--- a/resources/h2texturemodding.html
+++ b/resources/h2texturemodding.html
@@ -100,6 +100,7 @@
 		<p>You will now need to use the patch builder to create a patch archive that will contain your modified textures. See instructions for the patch builder here: <a href="https://github.com/pawREP/ZHM5PatchBuilder">https://github.com/pawREP/ZHM5PatchBuilder</a></p>
 		<p>&nbsp;</p>
 		</div>
+		<!--FOOTER-->
 		<div class="footer">
 			<span class="footer-content">
 				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
