--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -36,8 +36,9 @@
 				<a href="https://g2-mods.com/g2-mods/mods/hma.html">Hitman: Absolution</a>
 				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
 		</div>
+		<!--FOOTER-->
 		<div class="footer">
-			<span class="site-footer-owner">
+			<span class="footer-content">
 				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
 			</span>
 		</div>
