--- a/resources/index.html
+++ b/resources/index.html
@@ -32,6 +32,7 @@
             <h1 id="g2-modscom">Resources</h1>
 				<a href="h2texturemodding.html">H2 Texture Modding</a>
 		</div>
+		<!--FOOTER-->
 		<div class="footer">
 			<span class="footer-content">
 				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
