--- a/tools/index.html
+++ b/tools/index.html
@@ -31,6 +31,7 @@
         <div class="main-content">
             <h1 id="g2-modscom">Glacier² Tools</h1>
 		</div>
+		<!--FOOTER-->
 		<div class="footer">
 			<span class="footer-content">
 				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
