remove hard linking

--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -5,7 +5,7 @@
         <meta name="theme-color" content="#157878">
 		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-        <link rel="stylesheet" href="https://g2-mods.com/style.css">
+        <link rel="stylesheet" href="/style.css">
 		<title>G² Mods - HITMAN²</title>
 	</head>
 	<body>
@@ -22,9 +22,9 @@
 		<!--NAVIGATION BAR-->
 		<div class="menu-outer">
 			<ul id="horizontal-list">
-				<li><a href="https://g2-mods.com/">Home</a></li>
-				<li><a href="https://g2-mods.com/tools/">Tools</a></li>
-				<li><a href="https://g2-mods.com/resources/">Resources</a></li>
+				<li><a href="../../index.html">Home</a></li>
+				<li><a href="../../tools/">Tools</a></li>
+				<li><a href="../../resources/">Resources</a></li>
 				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
 			</ul>
 		</div>
