--- a/tools/index.html
+++ b/tools/index.html
@@ -5,7 +5,7 @@
         <meta name="theme-color" content="#157878">
 		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="/style.css">
 		<title>G² Mods</title>
 	</head>
 	<body>
