--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 		<div class="game-container">
 			<div class="griditem-img">
 				<img src="images/games/h2.jpg" alt="h2"> 
-				<a href="https://g2-mods.com/mods/h2/h2.html">HITMAN 2</a>
+				<a href="/mods/h2/h2.html">HITMAN 2</a>
 			</div>
 			<div class="griditem-img">
 				<img src="images/games/h2016.jpg" alt="h2016"> 
-				<a href="https://g2-mods.com/mods/h2016/h2016.html">HITMAN</a>
+				<a href="/mods/h2016/h2016.html">HITMAN</a>
 			</div>
 			<div class="griditem-img">
 				<img src="images/games/demd.jpg" alt="demd"> 
-				<a href="https://g2-mods.com/mods/demd/demd">Deus Ex: Mankind Divided</a>
+				<a href="/mods/demd/demd">Deus Ex: Mankind Divided</a>
 			</div>
 			<div class="griditem-img">
 				<img src="images/games/hma.jpg" alt="hma"> 
-				<a href="https://g2-mods.com/mods/hma/hma">Hitman: Absolution</a>
+				<a href="/mods/hma/hma">Hitman: Absolution</a>
 			</div>
 		</div>
 		<!--FOOTER-->
