start working on mod page

--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -29,12 +29,30 @@
 			</ul>
 		</div>
         <div class="main-content">
-            <h1 id="g2-modscom">Glacier² Engine Games</h1>
-				<a href="https://g2-mods.com/g2-mods/mods/h2016.html">HITMAN</a>
-				<a href="https://g2-mods.com/g2-mods/mods/h2.html">HITMAN 2</a>
-				<a href="https://g2-mods.com/g2-mods/mods/demd.html">Deus Ex: Mankind Divided</a>
-				<a href="https://g2-mods.com/g2-mods/mods/hma.html">Hitman: Absolution</a>
-				<p>HITMAN 2 is the main focus at the moment, but hopefully ends up expanding to all Glacier² Engine games, more work pls @B3LYP <3</p>
+            <h1 id="g2-modscom">Hitman 2 Mods</h1>
+		</div>
+		<!-- MOD GRID-->
+		<div class="mod-container">
+			<!--Mod1-->
+			<div class="griditem-mod">
+				<div class="griditem-mod-content-name">
+					<h3>Mod Name</h3>
+				</div>
+				<div class="griditem-mod-content-desc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</div>
+				<img src="/images/mods/placeholder.png"> 
+			</div>
+			<!--Mod2-->
+			<div class="griditem-mod">
+				<div class="griditem-mod-content-name">
+					<h3>Mod Name</h3>
+				</div>
+				<div class="griditem-mod-content-desc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</div>
+				<img src="/images/mods/placeholder.png"> 
+			</div>
 		</div>
 		<!--FOOTER-->
 		<div class="footer">
