--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -53,6 +53,66 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
+			<!--Mod2-->
+			<div class="griditem-mod">
+				<div class="griditem-mod-content-name">
+					<h3>Mod Name</h3>
+				</div>
+				<div class="griditem-mod-content-desc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</div>
+				<img src="/images/mods/placeholder.png"> 
+			</div>
+			<!--Mod2-->
+			<div class="griditem-mod">
+				<div class="griditem-mod-content-name">
+					<h3>Mod Name</h3>
+				</div>
+				<div class="griditem-mod-content-desc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</div>
+				<img src="/images/mods/placeholder.png"> 
+			</div>
+			<!--Mod2-->
+			<div class="griditem-mod">
+				<div class="griditem-mod-content-name">
+					<h3>Mod Name</h3>
+				</div>
+				<div class="griditem-mod-content-desc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</div>
+				<img src="/images/mods/placeholder.png"> 
+			</div>
+			<!--Mod2-->
+			<div class="griditem-mod">
+				<div class="griditem-mod-content-name">
+					<h3>Mod Name</h3>
+				</div>
+				<div class="griditem-mod-content-desc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</div>
+				<img src="/images/mods/placeholder.png"> 
+			</div>
+			<!--Mod2-->
+			<div class="griditem-mod">
+				<div class="griditem-mod-content-name">
+					<h3>Mod Name</h3>
+				</div>
+				<div class="griditem-mod-content-desc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</div>
+				<img src="/images/mods/placeholder.png"> 
+			</div>
+			<!--Mod2-->
+			<div class="griditem-mod">
+				<div class="griditem-mod-content-name">
+					<h3>Mod Name</h3>
+				</div>
+				<div class="griditem-mod-content-desc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
+				</div>
+				<img src="/images/mods/placeholder.png"> 
+			</div>
 		</div>
 		<!--FOOTER-->
 		<div class="footer">
