--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -51,7 +51,7 @@
 				<div class="griditem-mod-content-desc">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
 				</div>
-				<img src="/images/mods/placeholder.png"> 
+				<img src="/images/mods/placeholder2.png"> 
 			</div>
 			<!--Mod2-->
 			<div class="griditem-mod">
@@ -81,7 +81,7 @@
 				<div class="griditem-mod-content-desc">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
 				</div>
-				<img src="/images/mods/placeholder.png"> 
+				<img src="/images/mods/placeholder2.png"> 
 			</div>
 			<!--Mod2-->
 			<div class="griditem-mod">
@@ -111,7 +111,7 @@
 				<div class="griditem-mod-content-desc">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
 				</div>
-				<img src="/images/mods/placeholder.png"> 
+				<img src="/images/mods/placeholder2.png"> 
 			</div>
 		</div>
 		<!--FOOTER-->
@@ -120,5 +120,8 @@
 				<a href="https://github.com/glacier-modding/g2-mods">g2-mods.com</a> is maintained by the <a href="https://github.com/glacier-modding">glacier-modding</a> organization.
 			</span>
 		</div>
+		
+		<!-- Mod container updater for placeholder -->
+		<script src="/js/mod-container.js"></script>
     </body>
 </html>
