minor comment changes

--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -33,7 +33,7 @@
 		</div>
 		<!-- MOD GRID-->
 		<div class="mod-container">
-			<!--Mod1-->
+			<!--MOD-->
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -43,7 +43,7 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
-			<!--Mod2-->
+			<!--MOD-->
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -53,7 +53,7 @@
 				</div>
 				<img src="/images/mods/placeholder2.png"> 
 			</div>
-			<!--Mod2-->
+			<!--MOD-->
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -63,7 +63,7 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
-			<!--Mod2-->
+			<!--MOD-->
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -73,7 +73,7 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
-			<!--Mod2-->
+			<!--MOD-->
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -83,7 +83,7 @@
 				</div>
 				<img src="/images/mods/placeholder2.png"> 
 			</div>
-			<!--Mod2-->
+			<!--MOD-->
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -93,7 +93,7 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
-			<!--Mod2-->
+			<!--MOD-->
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -103,7 +103,7 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
-			<!--Mod2-->
+			<!--MOD-->
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
