--- a/tools/index.html
+++ b/tools/index.html
@@ -30,6 +30,12 @@
         </div>
         <div class="main-content">
             <h1 id="g2-modscom">Glacier² Tools</h1>
+            <ul>
+                <li><a href="https://aluigi.altervista.org/quickbms.htm">QuickBMS</a> (<a href="https://raw.githubusercontent.com/pawREP/ZHM5PatchBuilder/master/QuickBMS_script/Hitman2_rpkg.bms">Hitman2_rpkg.bms</a>) Used for extraction of the RPKG archives</li>
+                <li><a href="https://github.com/pawREP/ZHM5PatchBuilder">Patch Builder</a> Allows you to create your own custom patch archives for mods</li>
+                <li><a href="files/h6xxtea.zip">h6xxtea</a> Encryption/Decryption tool for thumbs.dat and packagedefintion.txt</li>
+                <li><a href="https://github.com/hcs64/ww2ogg">ww2ogg</a> Allows you to convert sound files found in WWEM/WWEV to Ogg Vorbis</li>
+            </ul>
 		</div>
 		<!--FOOTER-->
 		<div class="footer">
