--- a/tools/index.html
+++ b/tools/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<!--TOP LEFT HOME BUTTON/LOGO-->
 		<div class="logo">
-			<a href="http://g2-mods.com/">Glacier² Mods</a>
+			<a href="/">Glacier² Mods</a>
 		</div>
 		<!--NAVIGATION BAR-->
 		<div class="menu-outer">
