--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -15,12 +15,36 @@
 		</div>
 		<!--NAVIGATION BAR-->
 		<div class="menu-outer">
-			<ul id="horizontal-list">
-				<li><a href="../../index.html">Home</a></li>
-				<li><a href="../../tools/">Tools</a></li>
-				<li><a href="../../resources/">Resources</a></li>
-				<li><a href="https://github.com/orgs/glacier-modding/people">G² Mod Gang</a></li>
-			</ul>
+			<div class="dropdown">
+				<a href="/"><button class="dropbtn">Home</button></a>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn">Tools</button>
+				<div class="dropdown-content">
+					<a href="/tools/h2.html">HITMAN 2</a>
+					<a href="#">HITMAN</a>
+					<a href="#">Hitman: Absolution</a>
+					<a href="#">Deus Ex: Mankind Divided</a>
+				</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn">Resources</button>
+				<div class="dropdown-content">
+					<a href="/resources/h2.html">HITMAN 2</a>
+					<a href="#">HITMAN</a>
+					<a href="#">Hitman: Absolution</a>
+					<a href="#">Deus Ex: Mankind Divided</a>
+				</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn">Mods</button>
+				<div class="dropdown-content">
+					<a href="/mods/h2/h2.html">HITMAN 2</a>
+					<a href="#">HITMAN</a>
+					<a href="#">Hitman: Absolution</a>
+					<a href="#">Deus Ex: Mankind Divided</a>
+				</div>
+			</div>
 		</div>
 		<!--HEADER-->
         <div class="page-header">
