--- a/tools/h2.html
+++ b/tools/h2.html
@@ -53,7 +53,7 @@
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
         <div class="main-content">
-            <h1 id="g2-modscom">Glacier² Tools</h1>
+            <h1 id="g2-modscom">HITMAN 2 - Tools</h1>
             <ul>
                 <li><a href="https://aluigi.altervista.org/quickbms.htm">QuickBMS</a> (<a href="https://raw.githubusercontent.com/pawREP/ZHM5PatchBuilder/master/QuickBMS_script/Hitman2_rpkg.bms">Hitman2_rpkg.bms</a>) Used for extraction of the RPKG archives</li>
                 <li><a href="https://github.com/pawREP/ZHM5PatchBuilder">Patch Builder</a> Allows you to create your own custom patch archives for mods</li>
