--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -53,7 +53,7 @@
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
         <div class="main-content">
-            <h1 id="g2-modscom">Hitman 2 Mods</h1>
+            <h1 id="g2-modscom">HITMAN 2 - Mods</h1>
 		</div>
 		<!-- MOD GRID-->
 		<div class="mod-container">
