--- a/resources/h2.html
+++ b/resources/h2.html
@@ -53,7 +53,7 @@
             <a href="https://github.com/glacier-modding/g2-mods" class="btn">Website Source available on GitHub</a>
         </div>
         <div class="main-content">
-            <h1 id="g2-modscom">Resources</h1>
+            <h1 id="g2-modscom">HITMAN 2 - Resources</h1>
 				<a href="h2texturemodding.html">H2 Texture Modding</a>
 		</div>
 		<!--FOOTER-->
