restyle xtea to match the site's colour schemes
not 100% sure how I feel about this at the moment.

--- a/tools/online/xtea/index.html
+++ b/tools/online/xtea/index.html
@@ -7,6 +7,7 @@
             html, body {
                 margin: 0;
                 padding: 0;
+                background-color: #1f2125;
             }
             
             #save {
@@ -15,14 +16,17 @@
                 position: absolute;
                 top: 15px;
                 left: 15px;
+                background-color: #1f2125;
+                color: #05be99;
                 padding: 5px;
-                border: 1px solid black;
-                background: #cccccc;
+                font-size: 16px;
+                border: none;
                 cursor: pointer;
+                border-bottom: 2px solid #05be99;
             }
 
             #save:hover {
-                background: #cfffff;
+                background: #111111;
             }
 
             #naming {
@@ -45,10 +49,13 @@
                 bottom: 15px;
                 right: 15px;
             }
+            
             #packagedefinitions {
                 margin: 0;
                 padding: 0;
-                border-top: 1pt solid black;
+                color: #fff;
+                background-color: #1f2125;
+                border: 2px solid #05be99;
                 width: 100%;
                 height: 100%;                
             }
