--- a/tools/online/xtea/index.html
+++ b/tools/online/xtea/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-        <title>Package Definitions anyone?</title>
+        <title>PackageDefinitions/Thumbs editor</title>
+		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
         <style>
             html, body {
                 margin: 0;
@@ -51,9 +52,11 @@
             }
             
             #packagedefinitions {
+				font-family: 'Source Code Pro', monospace;
                 margin: 0;
                 padding: 0;
                 color: #fff;
+				font-size: 1.5em;
                 background-color: #1f2125;
                 border: 2px solid #05be99;
                 width: 100%;
