xtea minor text change

--- a/tools/online/xtea/index.html
+++ b/tools/online/xtea/index.html
@@ -113,7 +113,7 @@
 
             function disable() {
                 let target = document.getElementById('packagedefinitions');
-                target.value = "Drag and drop packagedefinitions.txt here.";
+                target.value = "Drag and drop packagedefinition.txt/thumbs.dat here.";
                 target.readOnly  = true;
             }
 
