Fix text to be ontop of image
When I hop out, they gon' call me Rico Bruce (Bruce, Bruce, Bruce)
When I drop the top, I turn that shit into a coupe (Huh, yeah)

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 		</div>
 		<!--GRID-->
 		<div class="game-container">
-			<div class="griditem-img">
+			<div class="griditem-game">
 				<img src="images/games/h2.jpg" alt="h2"> 
 				<a href="/mods/h2/h2.html">HITMAN 2</a>
 			</div>
-			<div class="griditem-img">
+			<div class="griditem-game">
 				<img src="images/games/h2016.jpg" alt="h2016"> 
 				<a href="/mods/h2016/h2016.html">HITMAN</a>
 			</div>
-			<div class="griditem-img">
+			<div class="griditem-game">
 				<img src="images/games/demd.jpg" alt="demd"> 
 				<a href="/mods/demd/demd">Deus Ex: Mankind Divided</a>
 			</div>
-			<div class="griditem-img">
+			<div class="griditem-game">
 				<img src="images/games/hma.jpg" alt="hma"> 
 				<a href="/mods/hma/hma">Hitman: Absolution</a>
 			</div>
