--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -58,6 +58,7 @@
 		<!-- MOD GRID-->
 		<div class="mod-container">
 			<!--MOD-->
+			<a href="#">
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -67,7 +68,9 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
+			</a>
 			<!--MOD-->
+			<a href="#">
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -77,7 +80,9 @@
 				</div>
 				<img src="/images/mods/placeholder2.png"> 
 			</div>
+			</a>
 			<!--MOD-->
+			<a href="#">
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -87,7 +92,9 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
+			</a>
 			<!--MOD-->
+			<a href="#">
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -97,7 +104,9 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
+			</a>
 			<!--MOD-->
+			<a href="#">
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -107,7 +116,9 @@
 				</div>
 				<img src="/images/mods/placeholder2.png"> 
 			</div>
+			</a>
 			<!--MOD-->
+			<a href="#">
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -117,7 +128,9 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
+			</a>
 			<!--MOD-->
+			<a href="#">
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -127,7 +140,9 @@
 				</div>
 				<img src="/images/mods/placeholder.png"> 
 			</div>
+			</a>
 			<!--MOD-->
+			<a href="#">
 			<div class="griditem-mod">
 				<div class="griditem-mod-content-name">
 					<h3>Mod Name</h3>
@@ -137,6 +152,7 @@
 				</div>
 				<img src="/images/mods/placeholder2.png"> 
 			</div>
+			</a>
 		</div>
 		<!--FOOTER-->
 		<div class="footer">
